--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "robmorgan/phinx": "^0.6.5"
     },
     "autoload": {
         "classmap": [
