--- a/phinx.yml
+++ b/phinx.yml
@@ -4,11 +4,11 @@ paths:
 
 environments:
     default_migration_table: phinxlog
-    default_database: development
+    default_database: production
     production:
         adapter: mysql
         host: localhost
-        name: production_db
+        name: webphim
         user: root
         pass: ''
         port: 3306
@@ -17,7 +17,7 @@ environments:
     development:
         adapter: mysql
         host: localhost
-        name: development_db
+        name: webphim
         user: root
         pass: ''
         port: 3306
